--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
     "prettier/prettier": "error"
-  }
+  },
+  "plugins": ["prettier"]
 }
