--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-next": "12.1.6",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.6.2",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "eslint-config-prettier": "^8.5.0"
   },
   "resolutions": {
     "styled-components": "^5"
